added JSON format version, basic template handling and two basic templates -- magazine title and page number...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/editor.html
+++ b/editor.html
@@ -121,8 +121,7 @@ $(document).ready(function(){
 
 	// load state and setup everything that depends on it...
 	loadState()
-	setupNavigator()
-	setupBookmarkTouchZones()
+	loadMagazineChrome()
 
 	// set default view...
 	togglePageView('on')
