I do not know why but I added a page index template...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -463,7 +463,16 @@ $(document).ready(function(){
 			<div class="cover page">
 				<div class="content" name="ArticleAnchorExample">
 					<h1>Page Templates</h1>
-					<a href="#home">home</a><br>
+
+					<p>
+					This page contains several examples of template fields,
+					the first one is the simplest, the magazine name 
+					(<span class="magazine-title-text">[MAGAZINE NAME]</span>),
+					then we'll have the index (see next) and in the bottom-right
+					corner is the page number...
+					</p>
+
+					<div class="article-index">[ARTICLE INDEX]</div>
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
