--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <script src="jli.js"></script>
 <script src="magazine.js"></script>
+<script src="navigator.js"></script>
 
 <!-- configuration, keep this last... -->
 <script src="keybindings.js"></script>
