split off the editor functions into it's own file...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/editor.html
+++ b/editor.html
@@ -15,6 +15,8 @@
 
 <script src="jli.js"></script>
 <script src="magazine.js"></script>
+<script src="navigator.js"></script>
+<script src="editor.js"></script>
 
 <!-- configuration, keep this last... -->
 <script src="keybindings.js"></script>
