--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ $(document).ready(function(){
 		// setup internal events...
 		.on('pageChanged bookmarkAdded bookmarkRemoved bookmarksCleared', saveState)
 		.on('pageChanged', updatePageNumberIndicator)
+		.on('magazineDataLoaded', loadMagazineChrome)
 
 		// user interactions...
 		.swipe({
@@ -106,7 +107,10 @@ $(document).ready(function(){
 	// load state and setup everything that depends on it...
 	// XXX load the data with loadJSON()
 	loadState()
-	loadMagazineChrome()
+	// need to call this once per whole page load....
+	setupNavigator()
+	// XXX STUB, needed untill we load everything frim JSON...
+	$('.viewer').trigger('magazineDataLoaded')
 
 	// set default view...
 	togglePageView('on')
