some cleanup and refactoring...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/editor.html
+++ b/editor.html
@@ -7,18 +7,24 @@
 <link rel="stylesheet" href="magazine.css">
 <link rel="stylesheet" href="magazine-custom.css">
 
-<script src="jquery.js"></script>
-<script src="jquery.touchSwipe.js"></script>
-<script src="jstorage.js"></script>
-<!-- XXX make this optional... -->
-<script src="ckeditor/ckeditor.js"></script>
+<script src="ext-lib/jquery.js"></script>
+<script src="ext-lib/jquery.touchSwipe.js"></script>
+<script src="ext-lib/jstorage.js"></script>
+<!-- EXPERIMENTAL -->
+<!-- 
+XXX scrollTo is a cool and a powerfull tool but it needs a sustantial code reorganization 
+	this might be a good idea/exersize sometime in the future...
+-->
+<!--script src="ext-lib/jquery.scrollto.js"></script-->
 
-<script src="jli.js"></script>
+<script src="lib/jli.js"></script>
+
 <script src="magazine.js"></script>
 <script src="navigator.js"></script>
 <script src="editor.js"></script>
 
 <!-- configuration, keep this last... -->
+<script src="platform.js"></script>
 <script src="keybindings.js"></script>
 <script src="config.js"></script>
 
