--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ $(document).ready(function(){
 
 <div class="scaler">
 <div class="aligner">
-	<div class="magazine" title="PortableMag">
+	<div class="magazine" name="PortableMag">
 		<div class="cover page current">
 			<div class="content">
 				<!--h1 style="color:gray;font-size:125px;margin-bottom:-35px; margin-top: 160px">PortableMag</h1>
