added page-sets (still not fully deserializable) and fixed a bug in the CSS layout...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -568,6 +568,32 @@ $(document).ready(function(){
 			</div>
 		</div>
 		<div class="article">
+			<!-- page set -->
+			<div class="page-set" style="background: url(img.jpg) no-repeat right top; background-size: 100% 100%; color: white;">
+				<div class="page cover no-resize page-align-left" style="background:none">
+					<div class="content">
+						<h1>Page Set Example</h1>
+
+						<div class="page-number-text">[PAGE NUMBER]</div>
+					</div>
+				</div>
+				<div class="page no-resize" style="background:none">
+					<div class="content">
+						Page in set<br>
+
+						<div class="page-number-text">[PAGE NUMBER]</div>
+					</div>
+				</div>
+				<div class="page no-resize page-align-right" style="background:none">
+					<div class="content">
+						Page in set<br>
+
+						<div class="page-number-text">[PAGE NUMBER]</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="article">
 			<div class="cover page">
 				<div class="content">
 					<h1 name="config">Configuration demo</h1>
