--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ $(document).ready(function(){
 		</div>
 		<div class="article">
 			<!-- page set -->
-			<div class="page-set" style="background: url(img.jpg) no-repeat right top; background-size: 100% 100%; color: white;">
+			<div class="page-set" style="background: url(img.jpg) no-repeat right top; background-size: 100% auto; color: white;">
 				<div class="page cover no-resize page-align-left" style="background:none">
 					<div class="content">
 						<h1>Page Set Example</h1>
