bug with loadJSON turned out to be a quirk in jQuery that refuses to set background:none on just created but not attached elements...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ $(document).ready(function(){
 				</div>
 			</div>
 
-			<div class="page">
+			<div class="page" style="background: black; color: white;">
 				<div class="content">
 					<h1>Two column</h1>
 					<div style="float:left; width: 45%; height: 100%; margin: 10px;">
@@ -570,21 +570,21 @@ $(document).ready(function(){
 		<div class="article">
 			<!-- page set -->
 			<div class="page-set" style="background: url(img.jpg) no-repeat right top; background-size: 100% auto; color: white;">
-				<div class="page cover no-resize page-align-left" style="background:none">
+				<div class="page cover no-resize page-align-left" style="background:transparent">
 					<div class="content">
 						<h1>Page Set Example</h1>
 
 						<div class="page-number-text">[PAGE NUMBER]</div>
 					</div>
 				</div>
-				<div class="page no-resize" style="background:none">
+				<div class="page no-resize" style="background:transparent">
 					<div class="content">
 						Page in set<br>
 
 						<div class="page-number-text">[PAGE NUMBER]</div>
 					</div>
 				</div>
-				<div class="page no-resize page-align-right" style="background:none">
+				<div class="page no-resize page-align-right" style="background:transparent">
 					<div class="content">
 						Page in set<br>
 
