--- a/index.html
+++ b/index.html
@@ -514,28 +514,28 @@ $(document).ready(function(){
 			</div>
 			<div class="page no-resize page-align-left">
 				<div class="content" style="background:gold">
-					Page
+					Left-aligned page...
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
 			<div class="page no-resize page-align-center">
 				<div class="content" style="background:yellow; width: 600px">
-					Page
+					Center-aligned page...
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
 			<div class="page no-resize page-align-right">
 				<div class="content" style="background:gold; width: 400px">
-					Page
+					Right-aligned page...
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
 			<div class="page no-resize page-align-right">
 				<div class="content" style="background:orange; width: 200px">
-					Page
+					Right-aligned page...
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
