some minor work and house keeping...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/editor.html
+++ b/editor.html
@@ -127,10 +127,10 @@ $(document).ready(function(){
 	// XXX this will need to be repeated to newly created elements...
 	$('[contenteditable=true]')
 		.on('focus', function(){
-			toggleEditorMode('on')
+			toggleInlineEditorMode('on')
 		})
 		.on('blur', function(){
-			toggleEditorMode('off')
+			toggleInlineEditorMode('off')
 		})
 
 
