rewritten createCSSClassToggler in a more general way, now it can work with class lists as well...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ $(document).ready(function(){
 </head>
 <body>
 
-<div class="viewer dark">
+<div class="viewer light">
 
 	<!-- Splash screen -->
 	<div class="splash noSwipe">
