--- a/index.html
+++ b/index.html
@@ -800,14 +800,14 @@ $(document).ready(function(){
 								<button id="USE_REAL_PAGE_SIZES" onclick="toggleSetting(this)"></button>
 							</td>
 						</tr>
-						<tr>
+						<!--tr>
 							<td>
 								Animate window resize: 
 							</td>
 							<td>
 								<button id="ANIMATE_WINDOW_RESIZE" onclick="toggleSetting(this)"></button>
 							</td>
-						</tr>
+						</tr-->
 						<tr>
 							<td>
 								Drag in full page view: 
@@ -842,6 +842,14 @@ $(document).ready(function(){
 						</tr>
 						<tr>
 							<td>
+								Toggele themes shadows: 
+							</td>
+							<td>
+								<button id="theme_shadow_toggler" onclick="toggleShadows(); $(this).text(toggleShadows('?'))"></button>
+							</td>
+						</tr>
+						<tr>
+							<td>
 								Full navigation gistory: 
 							</td>
 							<td>
@@ -860,7 +868,7 @@ $(document).ready(function(){
 
 					<hr noshade color="silver">
 
-					<table class="settings" width="100%" style="font-size:small">
+					<table class="settings" width="100%" style="font-size:x-small">
 						<tr>
 							<td width="50%">
 								Fingers supported: 
@@ -933,7 +941,7 @@ $(document).ready(function(){
 
 
 						FIT_PAGE_TO_VIEW = $('#FIT_PAGE_TO_VIEW').text() == 'true' ? true : false
-						ANIMATE_WINDOW_RESIZE = $('#ANIMATE_WINDOW_RESIZE').text() == 'true' ? true : false
+						//ANIMATE_WINDOW_RESIZE = $('#ANIMATE_WINDOW_RESIZE').text() == 'true' ? true : false
 						DRAG_FULL_PAGE = $('#DRAG_FULL_PAGE').text() == 'true' ? true : false
 						USE_REAL_PAGE_SIZES = $('#USE_REAL_PAGE_SIZES').text() == 'true' ? true : false
 						UPDATE_HASH_URL_POSITION = $('#UPDATE_HASH_URL_POSITION').text() == 'true' ? true : false
@@ -943,17 +951,18 @@ $(document).ready(function(){
 						$('#transition_duration').attr('value', TRANSITION_DURATION)
 						$('#PAGES_IN_RIBBON').attr('value', PAGES_IN_RIBBON)
 						$('#FIT_PAGE_TO_VIEW').text(FIT_PAGE_TO_VIEW)
-						$('#ANIMATE_WINDOW_RESIZE').text(ANIMATE_WINDOW_RESIZE)
+						//$('#ANIMATE_WINDOW_RESIZE').text(ANIMATE_WINDOW_RESIZE)
 						$('#DRAG_FULL_PAGE').text(DRAG_FULL_PAGE)
 						$('#USE_REAL_PAGE_SIZES').text(USE_REAL_PAGE_SIZES)
 						$('#UPDATE_HASH_URL_POSITION').text(UPDATE_HASH_URL_POSITION)
 						$('#FULL_HISTORY_ENABLED').text(FULL_HISTORY_ENABLED)
+						$('#theme_toggler').text(toggleThemes('?'))
+						$('#theme_shadow_toggler').text(toggleShadows('?'))
 
 						$('#FingersSupported').text($.fn.swipe.fingers.ALL)
 						var b = $('#BrowserInfo')
 						$.each($.browser, function(i, e){$('<div>'+i+': '+e+'</div>').appendTo(b)})
 						$('#UserAgent').text(navigator.userAgent)
-						$('#theme_toggler').text(toggleThemes('?'))
 					}
 					function toggleSetting(obj){
 						obj = $(obj)
