--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@ $(document).ready(function(){
 						</tr>
 						<tr>
 							<td>
-								Toggele themes shadows: 
+								Toggele theme shadowless mode: 
 							</td>
 							<td>
 								<button id="theme_shadow_toggler" onclick="toggleShadows(); $(this).text(toggleShadows('?'))"></button>
